# BabyBash

./: BabyBasher Testing and CI.docx  README.md  Test Plan  build-linux.spec  build-macos.spec  build-windows.spec  environment.yml  living-doc.md  pyproject.toml  pytest.ini
.github/workflows/: BabyBashCI.yml  python-package-conda.yml
babybash/: audioclassification.py  audioprocessing.py  filemanagement.py  gui.py  main.py
data/: key_freqs
documentation/: architecture.md  design.md  dev_guidelines.md  installation.md  testing.md
models/: model_v1.pth  model_v2.pth  model_v3.pth  model_v4.pth  scaler.joblib
src/: audioclassification.py  audioprocessing.py  audioremoval.py  dataplot.py  dataplotting.py  filemanagement.py  gui.py  main.py
tests/: conftest.py  test_audioclassification.py  test_audioprocessing.py  test_dataplotting.py  test_filemanagement.py  test_gui.py
